--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -83,7 +83,7 @@
                 android:layout_toEndOf="@+id/cardview"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/titolo"
-                android:textAlignment="viewStart"
+                android:textAlignment="center"
                 android:textColor="@color/sfondo"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
                 android:layout_toEndOf="@+id/cardview"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/autore"
-                android:textAlignment="viewStart"
+                android:textAlignment="center"
                 android:textColor="@color/sfondo"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="334dp"
@@ -115,7 +115,7 @@
                 android:layout_toEndOf="@+id/cardview"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/genere"
-                android:textAlignment="viewStart"
+                android:textAlignment="center"
                 android:textColor="@color/sfondo"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="334dp"
@@ -135,7 +135,7 @@
         android:layout_marginBottom="55dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:nestedScrollingEnabled="true"
         android:scrollbars="none"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
