--- a/app/src/main/res/layout/horizontal_item.xml
+++ b/app/src/main/res/layout/horizontal_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardview"
     android:layout_width="130dp"
-    android:layout_height="wrap_content"
+    android:layout_height="260dp"
     card_view:contentPadding="0dp"
     card_view:cardCornerRadius="5dp"
     card_view:cardElevation="4dp"
@@ -12,9 +12,9 @@
     android:layout_margin="4dp"
     >
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/Copertina"
@@ -22,6 +22,9 @@
             android:layout_height="190dp"
             android:background="#7ec8bd"
             android:contentDescription="@string/categoria1"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
             card_view:srcCompat="@drawable/ic_image_black_24dp" />
 
         <TextView
@@ -30,13 +33,19 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/Copertina"
             android:layout_gravity="center"
-            android:layout_marginBottom="3dp"
-            android:layout_marginStart="7dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-condensed"
             android:textAlignment="center"
             android:textColor="@color/cardview_dark_background"
             android:textSize="14sp"
+            android:textStyle="bold|italic"
+            card_view:layout_constraintBottom_toTopOf="@+id/Autore"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/Copertina"
             tools:text="Titolo" />
 
         <TextView
@@ -45,16 +54,19 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/Titolo"
             android:layout_gravity="center"
-            android:layout_marginBottom="3dp"
-            android:layout_marginStart="7dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:fontFamily="sans-serif-condensed"
             android:lineSpacingExtra="12sp"
             android:textAlignment="center"
             android:textColor="@color/cardview_dark_background"
             android:textSize="14sp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
             tools:text="Autore" />
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
