--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -5,17 +5,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_book"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/sfondoscuro">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary"
+        android:transitionName="toolbar"
         app:theme="@style/AppTheme.Toolbar"
-        android:elevation="4.1dp" />
+        android:elevation="4.1dp">
 
+        <TextView
+            android:id="@+id/titoloBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="?attr/actionBarSize"
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="center"
+            android:maxLines="1"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
+
+    </android.support.v7.widget.Toolbar>
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -36,7 +49,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/cardview"
                 android:layout_width="140dp"
@@ -46,9 +60,8 @@
                 android:layout_marginEnd="280dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
-                card_view:cardBackgroundColor="@color/sfondo"
+                card_view:cardBackgroundColor="#00ffffff"
                 card_view:cardCornerRadius="8dp"
-                card_view:cardElevation="5dp"
                 card_view:contentPadding="0dp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +72,18 @@
                 <RelativeLayout
                     android:id="@+id/relativeLayoutcopertina"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="#00ffffff">
+
+                    <ProgressBar
+                        android:id="@+id/progressBar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="190dp"
+                        android:indeterminate="true"
+                        android:indeterminateBehavior="repeat"
+                        android:indeterminateTint="@color/colorAccent"
+                        android:scaleY="5" />
 
                     <ImageView
                         android:id="@+id/Copertina"
@@ -67,9 +91,7 @@
                         android:layout_height="190dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:background="#7ec8bd"
-                        android:contentDescription="@string/categoria1"
-                        card_view:srcCompat="@drawable/ic_image_black_24dp" />
+                        android:contentDescription="@string/categoria1" />
 
                 </RelativeLayout>
 
@@ -79,15 +101,15 @@
                 android:id="@+id/titololibro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="10dp"
                 android:layout_toEndOf="@+id/cardview"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/titolo"
-                android:textAlignment="center"
+                android:textAlignment="viewStart"
                 android:textColor="@color/sfondo"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                tools:layout_editor_absoluteX="340dp"
+                tools:layout_editor_absoluteX="360dp"
                 tools:text="Titolo" />
 
             <TextView
@@ -99,9 +121,9 @@
                 android:layout_toEndOf="@+id/cardview"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/autore"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textColor="@color/sfondo"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 tools:layout_editor_absoluteX="334dp"
                 tools:layout_editor_absoluteY="83dp"
                 tools:text="Autore" />
@@ -115,9 +137,9 @@
                 android:layout_toEndOf="@+id/cardview"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/genere"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textColor="@color/sfondo"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 tools:layout_editor_absoluteX="334dp"
                 tools:layout_editor_absoluteY="83dp"
                 tools:text="Genere" />
