--- a/app/src/main/res/layout/horizontal_item.xml
+++ b/app/src/main/res/layout/horizontal_item.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardview"
     android:layout_width="130dp"
-    android:layout_height="260dp"
+    android:layout_height="230dp"
     card_view:contentPadding="0dp"
     card_view:cardCornerRadius="5dp"
     card_view:cardElevation="4dp"
-    card_view:cardBackgroundColor="@color/sfondo"
     android:layout_margin="4dp"
     >
 
@@ -16,47 +15,57 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:indeterminate="true"
+            android:indeterminateBehavior="repeat"
+            android:scaleY="5"
+            android:indeterminateTint="@color/colorPrimary"
+            card_view:layout_constraintBottom_toTopOf="@+id/titololibro"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/Copertina"
             android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:background="#7ec8bd"
+            android:layout_height="170dp"
             android:contentDescription="@string/categoria1"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/ic_image_black_24dp" />
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/Titolo"
+            android:id="@+id/titololibro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Copertina"
             android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="3dp"
             android:fontFamily="sans-serif-condensed"
             android:textAlignment="center"
             android:textColor="@color/cardview_dark_background"
             android:textSize="14sp"
             android:textStyle="bold|italic"
-            card_view:layout_constraintBottom_toTopOf="@+id/Autore"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/Copertina"
             tools:text="Titolo" />
 
         <TextView
-            android:id="@+id/Autore"
+            android:id="@+id/autoreLibro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Titolo"
+            android:layout_below="@+id/titololibro"
             android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginStart="3dp"
             android:fontFamily="sans-serif-condensed"
             android:lineSpacingExtra="12sp"
             android:textAlignment="center"
@@ -65,6 +74,7 @@
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/titololibro"
             tools:text="Autore" />
 
     </android.support.constraint.ConstraintLayout>
