--- a/app/src/main/res/layout/horizontal_layout.xml
+++ b/app/src/main/res/layout/horizontal_layout.xml
@@ -25,14 +25,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:nestedScrollingEnabled="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
+        android:nestedScrollingEnabled="true"
         android:text="@string/categoria1"
+        android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="22sp"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
