--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4b8a83</color>
-    <color name="colorPrimaryDark">#4b8a83</color>
+    <color name="colorPrimary">#883b3f</color>
+    <color name="colorPrimaryDark">#883b3f</color>
     <color name="colorAccent">#eba800</color>
     <color name="sfondo">#ffffff</color>
     <color name="pulsanti">#4b8a83</color>
-    <color name="sfondoscuro">#a0e9fff8</color>
+    <color name="sfondoscuro">#f6edee</color>
+    <color name="sfondomedio">#f5f5f5</color>
+    <color name="sfondoinfo">#f0f0f0</color>
 </resources>
