--- a/app/src/main/res/layout/book_section.xml
+++ b/app/src/main/res/layout/book_section.xml
@@ -20,21 +20,23 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardview"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_margin="8dp"
-                android:layout_marginStart="16dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 app:cardBackgroundColor="@color/sfondo"
-                app:cardCornerRadius="12dp"
+                app:cardCornerRadius="18dp"
                 app:cardElevation="3dp"
                 app:contentPadding="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/commento"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.3">
 
                 <RelativeLayout
                     android:id="@+id/relativeLayoutcopertina"
@@ -62,48 +64,52 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/commento"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
+                android:textAllCaps="false"
+                android:textColor="@android:color/black"
                 android:textSize="16sp"
+                android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:text="Commento" />
+                app:layout_constraintStart_toEndOf="@+id/cardview"
+                app:layout_constraintTop_toBottomOf="@+id/Data" />
 
             <TextView
                 android:id="@+id/nomeUtente"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-condensed"
                 android:text="@string/nomeutente"
+                android:textAlignment="textStart"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
+                android:textStyle="bold|italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Nome Utente" />
 
             <TextView
-                android:id="@+id/nomeCommento"
+                android:id="@+id/Data"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-condensed"
-                android:text="@string/nomeutente"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toTopOf="@+id/commento"
+                android:textAlignment="textStart"
+                android:textColor="#949494"
+                android:textSize="14sp"
+                android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/cardview"
                 app:layout_constraintTop_toBottomOf="@+id/nomeUtente"
-                tools:text="NomeCommento" />
+                tools:text="Data" />
         </android.support.constraint.ConstraintLayout>
 
 
